--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@ email: narendra.cs.biet@gmail.com
 author-title: Data Enthusiast
 about-author: > # ignore newlines until next property
       Who is always on the hunt of opportunities in the field of Data Science, 
-      which will allow me to leverage my core competencies in Machine Learning, 
+      which allow me to leverage my core competencies in Machine Learning, 
       Big Data processing, Inferential Statistics and Strategic Decision Making, 
-      in order to provide insights that will help business to grow. I have 1+ year 
-      of experiance in working on hadoop to extract data from various sources, 
-      transform it and load it into hadoop. I am also having working experiance on hybrid High Performance Computing 
-      cluster having 400+ nodes at IIT Delhi.
+      in order to provide insights that help business to grow. I have 1+ year 
+      of working experience on hadoop to extract data from various sources, 
+      transform it and load it into hadoop. I am also having working experience on hybrid High Performance Computing 
+      cluster, having 400+ nodes at IIT Delhi.
 
 skills:
   - Data Analytics / Data Science
