first article published

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,6 +1,7 @@
 
 Name: Narendra Singh
 Image: narendra-singh.jpg
+BWImage: narendra-singh-bw.jpg
 Email: narendra.cs.biet@gmail.com
 Title: Data Enthusiast
 About: > # ignore newlines until next property
